fix z-index in widget

--- a/app/assets/stylesheets/widget.scss
+++ b/app/assets/stylesheets/widget.scss
@@ -7,6 +7,10 @@
 	height: 200px;
 }
 
+.draggable{
+	z-index: 1000
+}
+
 .widget-title{
 	color:#9d9d9d;
 	background: #222222;
